--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Basic Style */
 ul {
   margin: 0;
   padding: 0px;
@@ -27,11 +26,11 @@ button{
   text-align: right;
 }
 
-.header-img {
+.header__img {
   width: 100%;
 }
 
-.header .more-inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -43,10 +42,29 @@ button{
 
 }
 
-.main-page {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
+}
+
+.section__h3 {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.section__h3_new {
+  display: block;
+  margin: 0 0 20px;
+}
+
+.section__wrapper {
+  display: flex;
 }
 
 .task {
@@ -55,8 +73,34 @@ button{
   flex-grow: 1;
 }
 
-.task-row-wrapper {
-  display: flex;
+.task_new-input {
+  width: 318px;
+}
+
+.task_label {
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
+}
+
+.task_input,
+.task_new-input {
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: lato, sans-serif;
+  color: #888;
+}
+
+.task_input:focus,
+.task_new-input:focus {
+  color: #333;
 }
 
 .button {
@@ -73,46 +117,21 @@ button{
   color: #3a3a3a;
 }
 
-/* Heading */
-.h3,
-.new-task {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
+.button__img {
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
 
-.task[type="text"] {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #fff;
-  border-radius: 6px;
-  font-family: lato, sans-serif;
+.button__img:hover {
+  transform: rotateZ(0);
+}
+
+.ul_completed-tasks .task_label {
+  text-decoration: line-through;
   color: #888;
 }
 
-.task[type="text"]:focus {
-  color: #333;
-}
-
-/* New Task */
-.new-task[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-
-#new-task {
-  width: 318px;
-}
-
-/* Task list */
 .li {
   overflow: hidden;
   padding: 20px 0;
@@ -122,62 +141,23 @@ button{
   align-items: center;
 }
 
-/* li > * {
-  vertical-align: middle;
-}
- */
-
-.li > .checkbox[type="checkbox"] {
+.li__checkbox {
   margin: 0 10px;
 }
 
-.li > .task-label {
-  padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
+.li > .task_input {
   width: 226px;
 }
 
-.li > .task[type="text"] {
-  width: 226px;
-}
-
-.delete .delete-img {
-  height: 2em;
-  transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
-}
-
-.delete .delete-img:hover {
-  transform: rotateZ(0);
-}
-
-/* Completed */
-#completed-tasks .task-label {
-  text-decoration: line-through;
-  color: #888;
-}
-
-/* Edit Task */
-/* ul li input[type=text] {
-  display:none
-}
- */
-
-/* .li input[type=text] {
-  display:none
-}
- */
-
-.li .task[type=text] {
+.li .task_input {
   display: none;
 }
 
-.edit-mode .task[type=text] {
+.li_edit-mode .task_input {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-label {
+.li_edit-mode .task_label {
   display: none;
 }
